# nnets_rust

./: .gitignore  Cargo.toml  [18, 18, 9]network.json  [18, 36, 36, 18, 9]network.json  [18, 9]network.json
src/: gameboards.rs  main.rs  nnets.rs  train_nnets.rs
