[package]
name = "nnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
nalgebra = { version = "0.32.3", features = ["rand", "serde-serialize"] }
inquire = "0.6.2"
crossterm = "0.26"
itertools = "0.12.0"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse"
]
